contrast issue

--- a/styles/small.css
+++ b/styles/small.css
@@ -137,7 +137,7 @@ body {
 
 .nav a.active,
 [aria-current="page"] {
-    color: #ecfd00;
+    color: #facc15;
     font-weight: 700
 }
 
